# gmux

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SKILL.md  build.rs  flake.nix  install.sh  justfile
.github/DISCUSSION_TEMPLATE/: ideas.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: build-artifacts-manual.yml  issue-gate.yml  label-next-release-issues.yml  pr-gate.yml  preview.yml  release.yml
docs/: 0-implementation-stages.md  1-herdr-trim-plan.md  2-terminal-compatibility-checklist.md
docs/next/: CHANGELOG.md  README.md
nix/: package.nix
scripts/: bootstrap_zig_0_15_2.sh  changelog.py  generate_third_party_notices.py  install_completions.sh  preview.py  release.sh  release_push.sh  seed_navigator_demo.sh  smoke_live_handoff_sessions.sh  test_changelog.py  test_integration_parallel.py  test_preview.py  vendor_libghostty_vt.py
src/: agent_resume.rs  build_info.rs  checksum.rs  cli.rs  config.rs  events.rs  handoff_runtime.rs  kitty_graphics.rs  layout.rs  logging.rs  main.rs  pane.rs  persist.rs  product_announcements.rs  release_notes.rs  remote.rs  render_prof.rs  selection.rs  session.rs  sound.rs  ui.rs  update.rs  workspace.rs  worktree.rs
src/api/: client.rs  mod.rs  schema.rs  (+2 more)
tests/: api_ping.rs  auto_detect.rs  cli_wrapper.rs  client_mode.rs  cross_area.rs  detach_reattach.rs  live_handoff.rs  multi_client.rs  server_headless.rs  terminal_feature_matrix.rs
website/: README.md  astro.config.mjs  index.html  install.sh  latest.json  package.json  preview.json  robots.txt
(+154 files in other folders)
