[package]
name = "gmux"
version = "0.6.8"
edition = "2021"
build = "build.rs"
description = "terminal multiplexer and session manager"
license = "AGPL-3.0-or-later"
repository = "https://github.com/stanley2058/gmux"
homepage = "https://github.com/stanley2058/gmux"
keywords = ["terminal", "tui", "multiplexer", "sessions"]
categories = ["command-line-utilities"]
include = ["src/**/*", "README.md", "LICENSE", "Cargo.toml"]

[dependencies]
base64 = "0.22.1"
bincode = { version = "2", features = ["serde"] }
bytes = "1"
crossterm = "0.29"
ctrlc = "3"
libc = "0.2"
portable-pty = "0.9"
png = "0.17"
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
toml = "0.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
unicode-width = "0.2"
